--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.redis.host = localhost
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=20
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.jedis.pool.min-idle=5
+spring.redis.jedis.pool.max-idle=10
 
+#mongodb
+
+spring.data.mongodb.username=aiker1
+spring.data.mongodb.password=123456
+
+#spring.data.mongodb.uri=mongodb://aiker:123456@localhost:27017/xiaoliu?replcaSet=spock
+#spring.data.mongodb.uri=mongodb://127.0.0.1:27017/xiaoliu?replcaSet=spock
+spring.data.mongodb.uri=mongodb://aiker1:123456@localhost:27017/xiaoliu
