--- a/bike/project.config.json
+++ b/bike/project.config.json
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.2",
 	"appid": "wxdd87403a80148099",
-	"projectname": "bike",
+	"projectname": "深度单车",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
